--- a/index.html
+++ b/index.html
@@ -16,7 +16,40 @@
         </ul>
     </header>
     <div class="content">
-        <div>This website is awesome</div>
+        <section>
+            <h1>This website is awesome</h1>
+            <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+            <div>this is a placeholder for an image</div>
+            <button>Sign up</button>            
+        </section>
+        <section>
+            <h2>Some random information</h2>
+            <div class="card">
+                <div></div>
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <div></div>
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <div></div>
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <div></div>
+                <div>this is some subtext under an illustration or image</div>
+            </div>
+        </section>
+        <section>
+            <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="quote-name">-Thor, God of Thunder</div>
+        </section>
+        <footer>
+            <div>Call to action! It's time!</div>
+            <div>Sign up for our product by clicking that button right over there!</div>
+            <button>Sign up</button>
+        </footer>
     </div>
 </body>
 </html>
