--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
             <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
             <div class="quote-name">-Thor, God of Thunder</div>
         </section>
-        <footer>
+        <section>
             <div>Call to action! It's time!</div>
             <div>Sign up for our product by clicking that button right over there!</div>
             <button>Sign up</button>
-        </footer>
+        </section>
     </div>
 </body>
 </html>
