--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,300&display=swap" rel="stylesheet"> 
     <title>Landing Page</title>
 </head>
 <body>
@@ -18,40 +20,52 @@
         </ul>
     </header>
     <div class="content">
-        <section>
-            <h1>This website is awesome</h1>
-            <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-            <div>this is a placeholder for an image</div>
-            <button>Sign up</button>            
+        <section class="main">
+            <div class="main-column">
+                <h1 class="title">This website is awesome</h1>
+                <div class="secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <button>Sign up</button>                 
+            </div>
+            <div class="image">this is a placeholder for an image</div>           
         </section>
-        <section>
-            <h2>Some random information</h2>
-            <div class="card">
-                <div></div>
-                <div>this is some subtext under an illustration or image</div>
+        <section class="information">
+            <h2>Some random information.</h2>
+            <div class="cards">
+                <div class="card">
+                    <div class="square"></div>
+                    <div>this is some subtext under an illustration or image</div>
+                </div>
+                <div class="card">
+                    <div class="square"></div>
+                    <div>this is some subtext under an illustration or image</div>
+                </div>
+                <div class="card">
+                    <div class="square"></div>
+                    <div>this is some subtext under an illustration or image</div>
+                </div>
+                <div class="card">
+                    <div class="square"></div>
+                    <div>this is some subtext under an illustration or image</div>
+                </div>
             </div>
-            <div class="card">
-                <div></div>
-                <div>this is some subtext under an illustration or image</div>
-            </div>
-            <div class="card">
-                <div></div>
-                <div>this is some subtext under an illustration or image</div>
-            </div>
-            <div class="card">
-                <div></div>
-                <div>this is some subtext under an illustration or image</div>
-            </div>
+
         </section>
-        <section>
+        <section class="quotes">
             <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
             <div class="quote-name">-Thor, God of Thunder</div>
         </section>
-        <section>
-            <div>Call to action! It's time!</div>
-            <div>Sign up for our product by clicking that button right over there!</div>
-            <button>Sign up</button>
+        <section class="footer"> 
+            <div class="footer-box">
+                <div class="footer-column">
+                    <div class="footer-header">Call to action! It's time!</div>
+                    <div>Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <button>Sign up</button>                
+            </div>
         </section>
+        <footer>
+            Copyright &copy; The Odin Project 2021 - Project by T.Fletcher
+        </footer>
     </div>
 </body>
 </html>
